# AirTAlgo

./: .travis.yml  README.md  audio_algo_build.html  doxy_audio-drain.py  index.html  lutin_airtalgo.py  lutin_audio-drain-test.py  lutin_audio-drain.py  lutin_audio_drain.py  lutin_audio_drain_test.py  lutin_drain.py  lutin_drain_test.py  lutin_drain_test_LMS.py  pages.html
airtalgo/: Algo.cpp  Algo.h  AutoLogInOut.cpp  AutoLogInOut.h  ChannelReorder.cpp  ChannelReorder.h  EndPoint.h  EndPointCallback.cpp  EndPointCallback.h  EndPointRead.cpp  EndPointRead.h  EndPointWrite.cpp  EndPointWrite.h  FormatUpdate.cpp  FormatUpdate.h  IOFormatInterface.cpp  IOFormatInterface.h  Process.cpp  Process.h  Resampler.cpp  Resampler.h  Volume.cpp  Volume.h  airtalgo.cpp  airtalgo.h  channel.cpp  channel.h  debug.cpp  debug.h  debugRemove.h  format.cpp  format.h
audio/drain/: Algo.cpp  Algo.h  Algo.hpp  AutoLogInOut.cpp  AutoLogInOut.h  AutoLogInOut.hpp  BiQuadFloat.cpp  BiQuadFloat.h  ChannelReorder.cpp  ChannelReorder.h  ChannelReorder.hpp  CircularBuffer.cpp  CircularBuffer.h  CircularBuffer.hpp  EndPoint.h  EndPoint.hpp  EndPointCallback.cpp  EndPointCallback.h  EndPointCallback.hpp  EndPointRead.cpp  EndPointRead.h  EndPointRead.hpp  EndPointWrite.cpp  EndPointWrite.h  EndPointWrite.hpp  Equalizer.cpp  Equalizer.h  Equalizer.hpp  FormatUpdate.cpp  FormatUpdate.h  FormatUpdate.hpp  IOFormatInterface.cpp  IOFormatInterface.h  IOFormatInterface.hpp  Process.cpp  Process.h  Process.hpp  Resampler.cpp  Resampler.h  Resampler.hpp  (+11 more)
catkin/: CMakeLists.txt  package.xml
doc/: build.md  mainpage.md
drain/: Algo.cpp  Algo.h  AutoLogInOut.cpp  AutoLogInOut.h  BiQuadFloat.cpp  BiQuadFloat.h  ChannelReorder.cpp  ChannelReorder.h  CircularBuffer.cpp  CircularBuffer.h  EndPoint.h  EndPointCallback.cpp  EndPointCallback.h  EndPointRead.cpp  EndPointRead.h  EndPointWrite.cpp  EndPointWrite.h  Equalizer.cpp  Equalizer.h  FormatUpdate.cpp  FormatUpdate.h  IOFormatInterface.cpp  IOFormatInterface.h  Process.cpp  Process.h  Resampler.cpp  Resampler.h  Volume.cpp  Volume.h  airtalgo.h  debug.cpp  debug.h  debugRemove.h
drain/echoCanceller/: Lms.cpp  Lms.h
search/: all_0.js  all_1.js  all_14.js  all_f.js  pages_0.js  pages_1.js
test/: channelOrder.cpp  debug.h  equalizer.cpp  format.cpp  main.cpp  resampling.cpp
testLMS/: debug.cpp  main.cpp
tools/drainBiQuadProfiling/: lutin_drain_biquad_profiling.py
tools/drainBiQuadProfiling/appl/: Windows.cpp  Windows.h  Windows.hpp  debug.cpp  debug.h  debug.hpp  main.cpp  main.hpp
tools/drainBiQuadProfiling/appl/widget/: DisplayFrequency.cpp  DisplayFrequency.h  DisplayFrequency.hpp
tools/drainBiQuadProfiling/data/: gui.xml
tools/drainEqualizerProfiling/: lutin_drain_equalizer_profiling.py
tools/drainEqualizerProfiling/appl/: Windows.cpp  Windows.h  Windows.hpp  debug.cpp  debug.h  main.cpp  main.hpp
tools/drainEqualizerProfiling/appl/widget/: DisplayFrequency.cpp  DisplayFrequency.h  DisplayFrequency.hpp
tools/drainEqualizerProfiling/data/: gui.xml
